--- a/Transformer/1. positional_encoding.ipynb
+++ b/Transformer/1. positional_encoding.ipynb
@@ -799,6 +799,51 @@
     "# Embedding은 초기에는 임의의 값을 가지고 훈련이 지속되면서 업데이트 되므로, 해당 함수는 실행할 때 마다 결과가 다르다.\n",
     "mk_encoder_input(['어제 카페 갔었어 거기 사람 많더라', '날이 추우니 감기 조심하세요'])"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Positional Encoding from Pytorch Tutorial"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class PositionalEncoding(nn.Module):\n",
+    "    def __init__(self, d_model: int, dropout: float = 0.1, max_len: int = 5000):\n",
+    "        super().__init__()\n",
+    "        self.dropout = nn.Dropout(p=dropout)\n",
+    "        position = torch.arange(max_len).unsqueeze(1)\n",
+    "        div_term = torch.exp(torch.arange(0, d_model, 2) * (-math.log(10000.0) / d_model))\n",
+    "        pe = torch.zeros(max_len, d_model)\n",
+    "        pe[:, 0::2] = torch.sin(position * div_term)\n",
+    "        pe[:, 1::2] = torch.cos(position * div_term)\n",
+    "        self.register_buffer('pe', pe)\n",
+    "        \n",
+    "    def forward(self, x):\n",
+    "        # x.size = (batch, payload, embed or channel)\n",
+    "        x = x + self.pe[:x.size(1)].expand(x.size(0), x.size(1), x.size(2))\n",
+    "        # x = x + self.pe[:x.size(1)]\n",
+    "        \"\"\"\n",
+    "        Args:\n",
+    "            x: Tensor, shape [seq_len, batch_size, embedding_dim]\n",
+    "            batch_first x : Tensor, shape [batch_size, seq_len, embedding_dim]\n",
+    "        \"\"\"\n",
+    "        return self.dropout(x)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* https://pytorch.org/tutorials/beginner/transformer_tutorial.html"
+   ]
   }
  ],
  "metadata": {
@@ -807,7 +852,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "ws1",
    "language": "python",
    "name": "python3"
   },
@@ -821,7 +866,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "2856db72fb1e77597a3b14e9c1bb4d2315d342edc16fc9e25c6c6e499688b933"
+   }
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
