--- a/Transformer/5. Encoder.ipynb
+++ b/Transformer/5. Encoder.ipynb
@@ -108,6 +108,34 @@
     "\n",
     "    return output, attn_prob"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Encoder with nn.TransformerEncoderLayer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Encoder Part\n",
+    "class encoder(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        encoder_layer = nn.TransformerEncoderLayer(d_model = args.embed_size, nhead = args.n_head, dropout = 0.2, \n",
+    "                                                        dim_feedforward = (args.embed_size * 4), batch_first = True)\n",
+    "        self.enc_layers = nn.ModuleList([encoder_layer for _ in range(args.n_layer)])\n",
+    "    \n",
+    "    def forward(self, enc_inputs, enc_padding_mask):\n",
+    "        for e_layer in self.enc_layers:\n",
+    "            enc_inputs = e_layer(enc_inputs, src_key_padding_mask  = enc_padding_mask)\n",
+    "        return enc_inputs"
+   ]
   }
  ],
  "metadata": {
