--- a/Transformer/5. Encoder.ipynb
+++ b/Transformer/5. Encoder.ipynb
@@ -127,8 +127,8 @@
     "class encoder(nn.Module):\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
-    "        encoder_layer = nn.TransformerEncoderLayer(d_model = args.embed_size, nhead = args.n_head, dropout = 0.2, \n",
-    "                                                        dim_feedforward = (args.embed_size * 4), batch_first = True)\n",
+    "        encoder_layer = nn.TransformerEncoderLayer(d_model: int = 512, nheadL int = 8, dropout: float = 0.1, \n",
+    "                                                        dim_feedforward: int = (512 * 4), batch_first: bool = True)\n",
     "        self.enc_layers = nn.ModuleList([encoder_layer for _ in range(args.n_layer)])\n",
     "    \n",
     "    def forward(self, enc_inputs, enc_padding_mask):\n",
