--- a/Transformer/6. Decoder.ipynb
+++ b/Transformer/6. Decoder.ipynb
@@ -168,6 +168,34 @@
     "      dec_enc_attn_probs.append(dec_enc_attn_prob)\n",
     "    return dec_output, self_attn_probs, dec_enc_attn_probs"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Encoder with nn.TransformerEncoderLayer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Encoder Part\n",
+    "class decoder(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        decoder_layer = nn.TransformerDecoderLayer(d_model: int = 512, nhead: int = 8, dropout: float = 0.1, \n",
+    "                                                        dim_feedforward: int = (512 * 4), batch_first: bool = True)\n",
+    "        self.dec_layers = nn.ModuleList([decoder_layer for _ in range(6)])\n",
+    "    \n",
+    "    def forward(self, enc_output, dec_inputs, attn_mask, memory_mask, dec_padding_mask, enc_padding_mask):\n",
+    "        for d_layer in self.dec_layers:\n",
+    "            dec_inputs = d_layer(memory = enc_output, tgt= dec_inputs, tgt_mask = attn_mask, memory_mask= memory_mask, tgt_key_padding_mask = dec_padding_mask, memory_key_padding_mask = enc_padding_mask)\n",
+    "        return dec_inputs"
+   ]
   }
  ],
  "metadata": {
