--- a/Transformer/2. Scaled Dot-Production Attention.ipynb
+++ b/Transformer/2. Scaled Dot-Production Attention.ipynb
@@ -709,6 +709,24 @@
     "    context = torch.matmul(attn_prob, V)\n",
     "    return context, attn_prob"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Encoder with nn.MultiheadAttention"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mh_attn = nn.MultiheadAttention(embed_dim: int = 512, num_heads: int = 8, dropout: float =0.2, batch_first: bool = True)\n",
+    "mh_attn(query: Tensor = query, key: Tensor = key, value: Tensor = value, key_padding_mask: Tensor = padding_mask, attn_mask: Tensor = attn_mask)"
+   ]
   }
  ],
  "metadata": {
@@ -717,7 +735,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "ws1",
    "language": "python",
    "name": "python3"
   },
@@ -731,7 +749,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "2856db72fb1e77597a3b14e9c1bb4d2315d342edc16fc9e25c6c6e499688b933"
+   }
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
